--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,6 @@
   "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
   "search.maxResults": 100000,
-  "editor.defaultFormatter": "ms-python.black-formatter",
   "python.terminal.activateEnvironment": true,
   "python.terminal.activateEnvInCurrentTerminal": true,
   "mypy.runUsingActiveInterpreter": true,
@@ -22,5 +21,8 @@
   "autoDocstring.docstringFormat": "sphinx",
   "cSpell.words": ["joseasoler", "rimsort"],
   "python.analysis.typeCheckingMode": "basic",
-  "isort.args": ["--profile", "black"]
+  "isort.args": ["--profile", "black"],
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  }
 }
