--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,7 +109,7 @@ jobs:
           if [[ "${{ github.event.inputs.type }}" == "Stable" ]]; then
             tag="${{steps.version.outputs.version}}"
           elif [[ "${{ github.event.inputs.type }}" == "Edge" ]]; then
-            tag="Edge"
+            tag=""
           else
             echo "Unknown type: ${{ github.event.inputs.type }}"
             exit 1
