--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,11 +15,11 @@ on:
         type: boolean
         default: true
       skip_build:
-        description: "Skip the build step (For debugging)"
+        description: "Skip the build step"
         type: boolean
         default: false
       run_id:
-        description: "Run ID to use if skipping build (For debugging)"
+        description: "Run ID to grab artifacts from if skipping build"
         type: number
         required: false
 
@@ -165,10 +165,11 @@ jobs:
           echo "body<<EOF"$'\n'"$message"$'\n'EOF >> "$GITHUB_OUTPUT"
         shell: bash
 
-      - name: Delete Previous Edge Release
+      - name: Delete Previous Edge Release and Tag
         if: ${{ github.event.inputs.type == 'Edge' }}
         run: |
-          gh release delete Edge -y --cleanup-tag || echo "No previous release with tag Edge found"
+          gh release delete Edge -y || echo "No previous release with tag Edge found"
+          gh tag delete Edge || echo "No previous tag with name Edge found"
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
