--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,21 @@ on:
         description: "Run ID to grab artifacts from if skipping build"
         type: number
         required: false
+      update_release:
+        description: "If an existing non-draft release exists, update it instead of failing. (Danger!)"
+        type: boolean
+        default: false
+        required: false
+      omit_name_during_update:
+        description: "Don't override name if updating a release"
+        type: boolean
+        default: true
+        required: false
+      omit_body_during_update:
+        description: "Don't override body if updating a release"
+        type: boolean
+        default: true
+        required: false
 
 permissions: {}
 
@@ -184,9 +199,9 @@ jobs:
           draft: ${{ github.event.inputs.draft }}
           body: ${{ steps.body.outputs.body }}
           allowUpdates: true
-          updateOnlyUnreleased: true
-          omitNameDuringUpdate: true
-          omitBodyDuringUpdate: true
+          updateOnlyUnreleased: ${{ inputs.update_release }}
+          omitNameDuringUpdate: ${{ inputs.omit_name_during_update }}
+          omitBodyDuringUpdate: ${{ inputs.omit_body_during_update }}
           removeArtifacts: true
           commit: ${{ steps.sem_version.outputs.current_commit }}
 
