Delete edge tag locally

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -184,6 +184,7 @@ jobs:
         if: ${{ github.event.inputs.type == 'Edge' }}
         run: |
           gh release delete Edge -y --cleanup-tag || echo "No previous release with tag Edge found"
+          git tag -d Edge || echo "Edge tag doesn't exist locally"
         shell: bash
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
