--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -125,8 +125,8 @@ jobs:
             mv "output" "$rootname"
             echo "Doing commit match check."
             version_xml="$(find $rootname -name version.xml)"
-            commit="$(dasel -f $version_xml -r xml 'version.commit')"
-            if [[ $commit != ${{  needs.pre-build.outputs.current_commit }} ]]; then
+            commit=$(dasel -f $version_xml -r xml 'version.commit')
+            if [[ "$commit" != ${{  needs.pre-build.outputs.current_commit }} ]]; then
               echo "Commit mismatch. Expected ${{  needs.pre-build.outputs.current_commit }} but true build commit was $commit"
               exit 1
             fi
